_sass/main.scss
@font-face {
    font-family: Inter;
    src: url("../fonts/Inter.var.woff2");
}

html,
body {
    margin: 0 auto;
    height: 100%;
}

body {
    background: #fff;
    color: #000;
    font-family: Inter;

    display: flex;
    flex-direction: column;

    width: 80%;
}

a {
    text-decoration: none;
}

a:visited {
    color: blue;
}

p {
    line-height: 1.6em;
    text-align: justify;
}

.container {
    display: grid;  
    flex-grow: 1;

    grid-template-columns: 40em 1fr;
    grid-template-rows: auto 1fr;
    grid-template-areas: "heading toc"
			 "main    toc";
}

@media all and (max-width: 960px) {
    body {
	width: 90%;
    }
    
    .container {
	grid-template-columns: 1fr;
	grid-template-rows: min-content min-content auto;
	grid-template-areas: "heading"
			     "toc"
			     "main";
    }

    .contents {
	background-color: #eee;
	margin-top: 1em;
    }
}

.buffer {
    height: 1em;
}

.header {
    margin: 2em 0 0.5em;
}

.header a {
    color: #666;
}

.heading {
    grid-area: heading;
    margin-bottom: 0;
}

.home {
    flex-grow: 1;
}

.main {
    grid-area: main;
}

.contents {
    grid-area: toc;
    padding-left: 1em;
}

.contents h3 {
    margin-bottom: 0;
    margin-left: -1px;
}

.toc {
    line-height: 1.8em;
    list-style-type: none;

    padding-left: 0;
}

.toc a {
    color: #000;
    text-decoration: underline dotted;
}

.toc ul {
    list-style-type: none;
    padding-left: 1.5em;
}

.footer {
    margin-top: 1em;
    min-height: 3em;
}

.footer-item {
    padding-right: 1em;
}

